src/test/deca/syntaxe_contextuelle/invalid/test_pass_3_print_non_printable_type.deca
// Description:
//    Program testing that you can not print a non printable variable 
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    println(true);
}
